--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -243,7 +243,10 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="MyClasses\PriceBand.cs" />
+    <Compile Include="MyClasses\PriceBandImp.cs" />
     <Compile Include="MyClasses\PriceRecord.cs" />
+    <Compile Include="MyClasses\PriceRecordImp.cs" />
+    <Compile Include="MyClasses\ValuationCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
