--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -242,6 +242,7 @@
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="MyClasses\CAPValuationCalculator.cs" />
     <Compile Include="MyClasses\PriceBand.cs" />
     <Compile Include="MyClasses\PriceBandImp.cs" />
     <Compile Include="MyClasses\PriceRecord.cs" />
