--- a/Tutorial.Tests/App.config
+++ b/Tutorial.Tests/App.config
@@ -4,6 +4,11 @@
     that apply only to the Test project.
 -->
 <configuration>
+  
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+  </configSections>
+    
     <appSettings>
 
     </appSettings>
