DbContext working, 1-n relationship pending

--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -270,6 +270,7 @@
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="EF_DBContext_Repositories\MyApplicationDBContext.cs" />
     <Compile Include="EF_DBContext_Repositories\PriceBandRepository.cs" />
+    <Compile Include="EF_DBContext_Repositories\PriceRecordRepository.cs" />
     <Compile Include="EF_DBContext_Repositories\VehicleRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
