VehicleRepository Completed,tests pending

--- a/Tutorial.Tests/Tutorial.Tests.csproj
+++ b/Tutorial.Tests/Tutorial.Tests.csproj
@@ -133,7 +133,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBaseUT\UnitTest1.cs" />
+    <Compile Include="DataBaseUT\VehicleRepositoryUT.cs" />
     <Compile Include="MyClassesUT\CapValuationCalculatorUT.cs" />
     <Compile Include="MyClassesIT\ValuationServiceIntegrationTest.cs" />
     <Compile Include="MyClassesUT\ValuationDaoUT.cs" />
