--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="EF_DBContext_Repositories\IRepository.cs" />
     <Compile Include="EF_DBContext_Repositories\MyApplicationDBContext.cs" />
     <Compile Include="EF_DBContext_Repositories\PriceBandRepository.cs" />
     <Compile Include="EF_DBContext_Repositories\PriceRecordRepository.cs" />
