--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -268,32 +268,35 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="EF_DBContext_Repositories\IDao.cs" />
-    <Compile Include="EF_DBContext_Repositories\IRepository.cs" />
-    <Compile Include="EF_DBContext_Repositories\MyApplicationDBContext.cs" />
-    <Compile Include="EF_DBContext_Repositories\PriceRecordDAO.cs" />
-    <Compile Include="EF_DBContext_Repositories\PriceRecordRepository.cs" />
-    <Compile Include="EF_DBContext_Repositories\VehicleDAO.cs" />
-    <Compile Include="EF_DBContext_Repositories\VehicleRepository.cs" />
+    <Compile Include="My_EntityClasses\IDao.cs" />
+    <Compile Include="My_EntityClasses\IRepository.cs" />
+    <Compile Include="My_EntityClasses\MyApplicationDBContext.cs" />
+    <Compile Include="My_EntityClasses\PriceRecordDAO.cs" />
+    <Compile Include="My_EntityClasses\PriceRecordRepository.cs" />
+    <Compile Include="My_EntityClasses\VehicleDAO.cs" />
+    <Compile Include="My_EntityClasses\VehicleRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="MyClasses\CAPValuationCalculator.cs" />
-    <Compile Include="MyClasses\IPriceBand.cs" />
-    <Compile Include="MyClasses\PriceBand.cs" />
-    <Compile Include="MyClasses\IPriceRecord.cs" />
-    <Compile Include="MyClasses\PriceRecord.cs" />
-    <Compile Include="MyClasses\UnityContainerSingleton.cs" />
-    <Compile Include="MyClasses\ValuationCalculator.cs" />
-    <Compile Include="MyClasses\ValuationDAO.cs" />
-    <Compile Include="MyClasses\ValuationDAODictionaryImp.cs" />
-    <Compile Include="MyClasses\ValuationDAOListImp.cs" />
-    <Compile Include="MyClasses\ValuationService.cs" />
-    <Compile Include="MyClasses\ValuationServiceImp.cs" />
-    <Compile Include="MyClasses\Vehicle.cs" />
+    <Compile Include="My_ModelClasses\CAPValuationCalculator.cs" />
+    <Compile Include="My_ModelClasses\IPriceBand.cs" />
+    <Compile Include="My_ModelClasses\PriceBand.cs" />
+    <Compile Include="My_ModelClasses\IPriceRecord.cs" />
+    <Compile Include="My_ModelClasses\PriceRecord.cs" />
+    <Compile Include="My_UnityClasses\UnityContainerSingleton.cs" />
+    <Compile Include="My_ModelClasses\ValuationCalculator.cs" />
+    <Compile Include="My_ModelClasses\ValuationDAO.cs" />
+    <Compile Include="My_ModelClasses\ValuationDAODictionaryImp.cs" />
+    <Compile Include="My_ModelClasses\ValuationDAOListImp.cs" />
+    <Compile Include="My_ModelClasses\ValuationService.cs" />
+    <Compile Include="My_ModelClasses\ValuationServiceImp.cs" />
+    <Compile Include="My_ModelClasses\Vehicle.cs" />
+    <Compile Include="My_XMLClasses\DatabaseCreation.cs" />
+    <Compile Include="My_XMLClasses\DataGeneration.cs" />
+    <Compile Include="My_XMLClasses\XMLManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
