--- a/Tutorial.Tests/Tutorial.Tests.csproj
+++ b/Tutorial.Tests/Tutorial.Tests.csproj
@@ -134,7 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataBaseUT\PriceRecordRepositoryUT.cs" />
+    <Compile Include="DataBaseUT\DatabaseGeneratorUT.cs" />
     <Compile Include="DataBaseUT\VehicleRepositoryUT.cs" />
+    <Compile Include="ModelWorld\ModelWorld.cs" />
     <Compile Include="MyClassesUT\CapValuationCalculatorUT.cs" />
     <Compile Include="MyClassesIT\ValuationServiceIntegrationTest.cs" />
     <Compile Include="MyClassesUT\ValuationDaoUT.cs" />
