--- a/Tutorial/Web.config
+++ b/Tutorial/Web.config
@@ -10,7 +10,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Tutorial-20170114112906.mdf;Initial Catalog=aspnet-Tutorial-20170114112906;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|
+    \aspnet-Tutorial-20170114112906.mdf;Initial Catalog=aspnet-Tutorial-20170114112906;Integrated Security=True" 
+    providerName="System.Data.SqlClient" />
+    <add name="sqlExpressConnection" connectionString="Data Source=DESKTOP-QNALCUA\SQLEXPRESS;Initial Catalog=test;Integrated Security=True"
+    providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
