--- a/Tutorial/Tutorial.csproj
+++ b/Tutorial/Tutorial.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PriceRecordsController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Models\LookUpCodesViewModel.cs" />
     <Compile Include="Models\PriceRecordList.cs" />
@@ -375,6 +376,7 @@
     <Content Include="Views\PriceRecords\EditPriceRecord.cshtml" />
     <Content Include="Views\PriceRecords\AddPriceRecord.cshtml" />
     <Content Include="Views\PriceRecords\RecordAdded.cshtml" />
+    <Content Include="Views\Test\TestGeolocation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
